--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+@use 'palette.scss' as palette;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+$RecipeLibrary-dark-primary: mat.define-palette(palette.$recipe-green-palette, 500, 300, 700);
+$RecipeLibrary-dark-accent: mat.define-palette(palette.$recipe-yellow-palette, 300);
+$RecipeLibrary-dark-warn: mat.define-palette(palette.$recipe-red-palette, 300, 200, 400);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$RecipeLibrary-dark-theme: mat.define-dark-theme((
+  color: (
+    primary: $RecipeLibrary-dark-primary,
+    accent: $RecipeLibrary-dark-accent,
+    warn: $RecipeLibrary-dark-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($RecipeLibrary-dark-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
