--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,10 +1,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    position: absolute;
     justify-content: space-between;
-    right: 0;
-    width: 4vw;
+    width: 100%;
     height: 100%;
 }
 
