Started adding Add Recipe Container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="container">
     <app-search></app-search>
     <app-sidebar></app-sidebar>
+    <app-extensible-container>
+        <app-add-recipe></app-add-recipe>
+    </app-extensible-container>
 </div>
