--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,11 @@ app-sidebar {
     width: 4vw;
     height: 100%;
 }
+
+app-extensible-container {
+    width: 20vw;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    right: 4vw;
+}
