--- a/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
+++ b/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
@@ -1,20 +1,7 @@
 <div class="container">
 <h2 mat-dialog-title>Add / Edit {{headline}}</h2>
 <mat-dialog-content>
-    <mat-form-field appearance="fill">
-        <mat-label>Add new</mat-label>
-        <input type="text"
-               placeholder="Pick from existing {{headline}} or add a new one"
-               matInput
-               [formControl]="itemSelect"
-               [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let item of filteredItems | async" [value]="item" (click)="onItemSelect(item)">
-            <mat-icon *ngIf="item === itemSelect.value && !knownItems.includes(item)">add</mat-icon>
-            {{item}}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
+    <app-autocomplete-with-add-function [knownItems]="dialogData.knownItems" [filterFunction]="notAlreadyIncludedInData" (onItemSelected)="onItemSelect($event)" [itemName]="headline" [refreshFilteredItems]="refreshAutocompleteItems.asObservable()"></app-autocomplete-with-add-function>
 
     <table mat-table [dataSource]="data.length > 0 ? tableDataSource : ['No items added']">
             
@@ -24,9 +11,9 @@
         </ng-container>
 
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef>
-                <button mat-icon-button disableRipple><mat-icon>trashcan</mat-icon></button>
+            <th mat-header-cell *matHeaderCellDef class="action"></th>
+            <td mat-cell *matCellDef="let element">
+                <button *ngIf="data.length > 0" mat-icon-button disableRipple color="warn" (click)="removeElement(element)"><mat-icon>delete</mat-icon></button>
             </td>
         </ng-container>
       
@@ -36,6 +23,6 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" color="primary" cdkFocusInitial>Apply</button>
+  <button mat-button [mat-dialog-close]="data" color="primary" cdkFocusInitial>Apply</button>
 </mat-dialog-actions>
 </div>
