--- a/src/app/components/add-recipe/add-recipe.component.html
+++ b/src/app/components/add-recipe/add-recipe.component.html
@@ -5,14 +5,14 @@
             <mat-label>Recipe Name</mat-label>
             <input matInput placeholder="Name of recipe" [(ngModel)]="recipeName">
         </mat-form-field>
-        <app-autocomplete-with-add-function itemName="Cookbook" [knownItems]="knownCookbooks" labelName="Cookbook"></app-autocomplete-with-add-function>
-        <app-selected-items-display headline="Ingredients" [knownItems]="knownIngredients"></app-selected-items-display>
+        <app-autocomplete-with-add-function itemName="Cookbook" [knownItems]="knownCookbooks" labelName="Cookbook" [clearOnSelect]="false" (onItemSelected)="updateCookbookName($event)"></app-autocomplete-with-add-function>
+        <app-selected-items-display headline="Ingredients" [knownItems]="knownIngredients" [data]="selectedIngredients" (onUpdateData)="updateSelectedIngredients($event)"></app-selected-items-display>
         <br>
-        <app-selected-items-display headline="Categories"></app-selected-items-display>
+        <app-selected-items-display headline="Categories" [knownItems]="knownCategories" [data]="selectedCategories" (onUpdateData)="updateSelectedCategories($event)"></app-selected-items-display>
         <app-rating-display [editable]="true" (onNewRating)="updateRating($event)"></app-rating-display>
     </div>
     <div class="buttons">
-        <button mat-raised-button color="primary" cdkFocusInitial>Add</button>
+        <button mat-raised-button color="primary" cdkFocusInitial (click)="addRecipe()">Add</button>
         <button mat-raised-button>Cancel</button>
     </div>
 </div>
