--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -4,6 +4,19 @@
     width: 100%;
     height: 100%;
     align-items: center;
+
+    h1 {
+        margin-top: 2vh;
+        margin-bottom: 3vh;
+    }
+
+    mat-form-field {
+        margin-bottom: 2vh;
+    }
+
+    app-autocomplete-with-add-function {
+        margin-bottom: 2vh;
+    }
 }
 
 .inputs {
@@ -30,5 +43,6 @@
 }
 
 app-selected-items-display {
-    height: 35%;
+    min-height: 30vh;
+    max-height: 30vh;
 }
