Basic Version of AddRecipe working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <app-search></app-search>
-    <app-sidebar></app-sidebar>
-    <app-extensible-container>
-        <app-add-recipe></app-add-recipe>
+    <app-sidebar (onAddRecipe)="toggleAddRecipe()" (onEditRecipes)="toggleEditRecipes()" (onSettings)="toggleSettings()"></app-sidebar>
+    <app-extensible-container *ngIf="showExtensibleContainer()">
+        <app-add-recipe *ngIf="showAddRecipe()" (onRecipeAdded)="toggleAddRecipe()"></app-add-recipe>
     </app-extensible-container>
 </div>
