Continued Edit Recipes Screen

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,6 +18,13 @@ app-extensible-container {
     width: 20vw;
     height: 100%;
     z-index: 1;
-    position: absolute;
+    position: absolute;  
+}
+
+.positionIndex0 {
     right: 4vw;
+}
+
+.positionIndex1 {
+    right: 24vw;
 }
