--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container">
     <app-search></app-search>
     <app-sidebar (onAddRecipe)="toggleAddRecipe()" (onEditRecipes)="toggleEditRecipes()" (onSettings)="toggleSettings()"></app-sidebar>
-    <app-extensible-container *ngIf="showExtensibleContainer()">
-        <app-recipe-form *ngIf="showAddRecipe()" (onRecipeChange)="toggleAddRecipe()"></app-recipe-form>
-        <app-edit-recipes *ngIf="showEditRecipes()"></app-edit-recipes>
+    <app-extensible-container class="positionIndex0" *ngIf="showEditRecipes()">
+        <app-edit-recipes *ngIf="showEditRecipes()" [reloadRecipes]="recipeEdited.asObservable()" (onEditRecipe)="editRecipe($event)"></app-edit-recipes>
+    </app-extensible-container>
+    <app-extensible-container *ngIf="showAddRecipe() || showEditRecipe()" [ngClass]="{'positionIndex0': showAddRecipe(), 'positionIndex1': showEditRecipe()}">
+        <app-recipe-form *ngIf="showAddRecipe() || showEditRecipe()" (onRecipeChange)="recipeChange()" [recipeInput]="currentlyEditedRecipe"></app-recipe-form>
     </app-extensible-container>
 </div>
