--- a/src/app/components/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/edit-recipes/edit-recipes.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <h1>Edit / Delete Recipes</h1>
+    <div class="tableBackground tableContainer">
     <table mat-table [dataSource]="tableDataSource">
             
         <ng-container matColumnDef="name">
@@ -10,7 +11,7 @@
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef class="action"></th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button disableRipple><mat-icon>edit</mat-icon></button>
+                <button mat-icon-button disableRipple (click)="editRecipe(element)"><mat-icon>edit</mat-icon></button>
             </td>
         </ng-container>
 
@@ -29,5 +30,6 @@
             </td>
         </tr>
     </table>
+    </div>
 
 </div>
