--- a/src/app/components/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/selected-items-display/selected-items-display.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container tableBackground">
     <table mat-table [dataSource]="tableDataSource">
             
         <ng-container matColumnDef="name">
