--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -5,12 +5,6 @@
             <input matInput placeholder="Insert Search terms here" value="">
             <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
-        <div class="searchOptions">
-            <!-- Search for Terms in (Recipename, Ingredients, Categories) -->
-            <!-- Selected Cookbooks -->
-            <!-- Required Ingredients -->
-            <!-- Required Categories -->
-            <!-- Minimum Rating -->
-        </div>
+      <app-search-options class="searchOptions"></app-search-options>
     </div>
 </div>
