--- a/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
+++ b/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
@@ -1,10 +1,10 @@
 <div class="container">
 <h2 mat-dialog-title>Add / Edit {{headline}}</h2>
 <mat-dialog-content>
-    <app-autocomplete-with-add-function [knownItems]="dialogData.knownItems" [filterFunction]="notAlreadyIncludedInData" (onItemSelected)="onItemSelect($event)" [itemName]="headline" [refreshFilteredItems]="refreshAutocompleteItems.asObservable()"></app-autocomplete-with-add-function>
+    <app-autocomplete-with-add-function [knownItems]="dialogData.knownItems" [filterFunction]="notAlreadyIncludedInData" (onItemSelected)="onItemSelect($event)" [itemName]="headline" [refreshFilteredItems]="refreshAutocompleteItems.asObservable()" [disableAddFunction]="onlyKnownItems"></app-autocomplete-with-add-function>
 
     <table mat-table [dataSource]="tableDataSource">
-            
+
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> {{headline}} </th>
           <td mat-cell *matCellDef="let element"> {{element}} </td>
@@ -16,7 +16,7 @@
                 <button mat-icon-button disableRipple color="warn" (click)="removeElement(element)"><mat-icon>delete</mat-icon></button>
             </td>
         </ng-container>
-      
+
         <tr mat-header-row *matHeaderRowDef="columns"></tr>
         <tr mat-row *matRowDef="let row; columns: columns;"></tr>
         <tr class="mat-row" *matNoDataRow>
