--- a/src/palette.scss
+++ b/src/palette.scss
@@ -1,103 +1,103 @@
-@use 'sass:map';
+@use "sass:map";
 
 $recipe-green-palette: (
- 50: #ebf4ea,
- 100: #cee3cd,
- 200: #b0d2ae,
- 300: #93c18f,
- 400: #7eb578,
- 500: #6ba862,
- 600: #629959,
- 700: #56874e,
- 800: #4d7645,
- 900: #3c5736,
- contrast: (
-   50: rgba(black, 0.87),
-   100: rgba(black, 0.87),
-   200: rgba(black, 0.87),
-   300: rgba(black, 0.87),
-   400: rgba(black, 0.87),
-   500: rgba(black, 0.87),
-   600: rgba(black, 0.87),
-   700: rgba(black, 0.87),
-   800: white,
-   900: white,
- )
+  50: #ebf4ea,
+  100: #cee3cd,
+  200: #b0d2ae,
+  300: #93c18f,
+  400: #7eb578,
+  500: #6ba862,
+  600: #629959,
+  700: #56874e,
+  800: #4d7645,
+  900: #3c5736,
+  contrast: (
+    50: rgba(black, 0.87),
+    100: rgba(black, 0.87),
+    200: rgba(black, 0.87),
+    300: rgba(black, 0.87),
+    400: rgba(black, 0.87),
+    500: rgba(black, 0.87),
+    600: rgba(black, 0.87),
+    700: rgba(black, 0.87),
+    800: white,
+    900: white,
+  ),
 );
 
 $recipe-yellow-palette: (
- 50: #fcffea,
- 100: #f6fdca,
- 200: #eefba5,
- 300: #edff86,
- 400: #e6fb69,
- 500: #e0f84e,
- 600: #d6e84a,
- 700: #c5d140,
- 800: #b4b938,
- 900: #99912a,
- contrast: (
-   50: rgba(black, 0.87),
-   100: rgba(black, 0.87),
-   200: rgba(black, 0.87),
-   300: rgba(black, 0.87),
-   400: rgba(black, 0.87),
-   500: rgba(black, 0.87),
-   600: rgba(black, 0.87),
-   700: rgba(black, 0.87),
-   800: rgba(black, 0.87),
-   900: rgba(black, 0.87),
- )
+  50: #fcffea,
+  100: #f6fdca,
+  200: #eefba5,
+  300: #edff86,
+  400: #e6fb69,
+  500: #e0f84e,
+  600: #d6e84a,
+  700: #c5d140,
+  800: #b4b938,
+  900: #99912a,
+  contrast: (
+    50: rgba(black, 0.87),
+    100: rgba(black, 0.87),
+    200: rgba(black, 0.87),
+    300: rgba(black, 0.87),
+    400: rgba(black, 0.87),
+    500: rgba(black, 0.87),
+    600: rgba(black, 0.87),
+    700: rgba(black, 0.87),
+    800: rgba(black, 0.87),
+    900: rgba(black, 0.87),
+  ),
 );
 
 $recipe-red-palette: (
- 50: #ffebee,
- 100: #ffccd1,
- 200: #ff9795,
- 300: #ff6b6b,
- 400: #ff4142,
- 500: #ff2c22,
- 600: #ff1d25,
- 700: #ee061f,
- 800: #e00017,
- 900: #d00007,
- contrast: (
-   50: rgba(black, 0.87),
-   100: rgba(black, 0.87),
-   200: rgba(black, 0.87),
-   300: rgba(black, 0.87),
-   400: rgba(black, 0.87),
-   500: rgba(black, 0.87),
-   600: rgba(black, 0.87),
-   700: rgba(black, 0.87),
-   800: white,
-   900: white,
- )
+  50: #ffebee,
+  100: #ffccd1,
+  200: #ff9795,
+  300: #ff6b6b,
+  400: #ff4142,
+  500: #ff2c22,
+  600: #ff1d25,
+  700: #ee061f,
+  800: #e00017,
+  900: #d00007,
+  contrast: (
+    50: rgba(black, 0.87),
+    100: rgba(black, 0.87),
+    200: rgba(black, 0.87),
+    300: rgba(black, 0.87),
+    400: rgba(black, 0.87),
+    500: rgba(black, 0.87),
+    600: rgba(black, 0.87),
+    700: rgba(black, 0.87),
+    800: white,
+    900: white,
+  ),
 );
 
 $recipe-black-palette: (
- 50: #f3f8fd,
- 100: #ebf0f5,
- 200: #e0e5ea,
- 300: #cfd4d8,
- 400: #aaafb3,
- 500: #8a8f93,
- 600: #63676b,
- 700: #4f5457,
- 800: #323639,
- 900: #121619,
- contrast: (
-   50: rgba(black, 0.87),
-   100: rgba(black, 0.87),
-   200: rgba(black, 0.87),
-   300: rgba(black, 0.87),
-   400: rgba(black, 0.87),
-   500: rgba(black, 0.87),
-   600: white,
-   700: white,
-   800: white,
-   900: white,
- )
+  50: #f3f8fd,
+  100: #ebf0f5,
+  200: #e0e5ea,
+  300: #cfd4d8,
+  400: #aaafb3,
+  500: #8a8f93,
+  600: #63676b,
+  700: #4f5457,
+  800: #323639,
+  900: #121619,
+  contrast: (
+    50: rgba(black, 0.87),
+    100: rgba(black, 0.87),
+    200: rgba(black, 0.87),
+    300: rgba(black, 0.87),
+    400: rgba(black, 0.87),
+    500: rgba(black, 0.87),
+    600: white,
+    700: white,
+    800: white,
+    900: white,
+  ),
 );
 
 $light-focused: rgba(white, 0.12);
@@ -105,11 +105,11 @@ $light-focused: rgba(white, 0.12);
 // Background palette for dark themes.
 $recipe-dark-theme-background-palette: (
   status-bar: black,
-  app-bar:    map.get($recipe-black-palette, 900),
+  app-bar: map.get($recipe-black-palette, 900),
   background: map.get($recipe-black-palette, 800),
-  hover:      rgba(white, 0.04), 
-  card:       map.get($recipe-black-palette, 800),
-  dialog:     map.get($recipe-black-palette, 800),
+  hover: rgba(white, 0.04),
+  card: map.get($recipe-black-palette, 800),
+  dialog: map.get($recipe-black-palette, 800),
   disabled-button: rgba(white, 0.12),
   raised-button: map.get($recipe-black-palette, 800),
   focused-button: $light-focused,
