--- a/src/app/components/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/edit-recipes/edit-recipes.component.html
@@ -1,35 +1,44 @@
 <div class="container">
-    <h1>Edit / Delete Recipes</h1>
-    <div class="tableBackground tableContainer">
+  <h1>Edit / Delete Recipes</h1>
+  <div class="tableBackground tableContainer">
     <table mat-table [dataSource]="tableDataSource">
-            
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Recipe </th>
-          <td mat-cell *matCellDef="let element"> {{element.recipeName}} </td>
-        </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Recipe</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.recipeName }}
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef class="action"></th>
-            <td mat-cell *matCellDef="let element">
-                <button mat-icon-button disableRipple (click)="editRecipe(element)"><mat-icon>edit</mat-icon></button>
-            </td>
-        </ng-container>
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef class="action"></th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button disableRipple (click)="editRecipe(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef class="action"></th>
-            <td mat-cell *matCellDef="let element">
-                <button mat-icon-button disableRipple color="warn" (click)="openDeleteDialog(element)"><mat-icon>delete</mat-icon></button>
-            </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" [attr.colspan]="columns.length">
-              No Recipes added yet
-            </td>
-        </tr>
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef class="action"></th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            disableRipple
+            color="warn"
+            (click)="openDeleteDialog(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: columns"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" [attr.colspan]="columns.length">
+          No Recipes added yet
+        </td>
+      </tr>
     </table>
-    </div>
-
+  </div>
 </div>
