--- a/src/app/components/rating-display/rating-display.component.html
+++ b/src/app/components/rating-display/rating-display.component.html
@@ -1,8 +1,12 @@
-<div class="container" [ngClass]="{'editable': editable}">
-    <h3 class="headline">{{labelAddition}} Rating:</h3>
-    <div class="stars">
-        <span *ngFor="let i of counter(5)">
-            <mat-icon [ngClass]="{'filledStar': rating >= i}" (click)="updateRating(i)">star</mat-icon>
-        </span>
-    </div>
+<div class="container" [ngClass]="{ editable: editable }">
+  <h3 class="headline">{{ labelAddition }} Rating:</h3>
+  <div class="stars">
+    <span *ngFor="let i of counter(5)">
+      <mat-icon
+        [ngClass]="{ filledStar: rating >= i }"
+        (click)="updateRating(i)"
+        >star</mat-icon
+      >
+    </span>
+  </div>
 </div>
