--- a/src/app/components/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/selected-items-display/selected-items-display.component.html
@@ -1,25 +1,40 @@
 <div class="container tableBackground">
-    <table mat-table [dataSource]="tableDataSource">
-            
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> {{headline}} </th>
-          <td mat-cell *matCellDef="let element"> {{element}} </td>
-        </ng-container>
+  <table mat-table [dataSource]="tableDataSource">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>
+        {{ headline }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="action" *ngIf="editable">
-            <th mat-header-cell *matHeaderCellDef class="action"> 
-                <button mat-icon-button disableRipple *ngIf="data.length === 0" (click)="openDialog()"><mat-icon>add</mat-icon></button>
-                <button mat-icon-button disableRipple *ngIf="data.length > 0" (click)="openDialog()"><mat-icon>edit</mat-icon></button> 
-            </th>
-            <td mat-cell *matCellDef class="action"></td>
-          </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" [attr.colspan]="columns.length">
-            No items added
-          </td>
-        </tr>
-      </table>
+    <ng-container matColumnDef="action" *ngIf="editable">
+      <th mat-header-cell *matHeaderCellDef class="action">
+        <button
+          mat-icon-button
+          disableRipple
+          *ngIf="data.length === 0"
+          (click)="openDialog()"
+        >
+          <mat-icon>add</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          disableRipple
+          *ngIf="data.length > 0"
+          (click)="openDialog()"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+      </th>
+      <td mat-cell *matCellDef class="action"></td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" [attr.colspan]="columns.length">No items added</td>
+    </tr>
+  </table>
 </div>
