--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,8 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-@use 'sass:map';
-@use 'palette.scss' as palette;
+@use "@angular/material" as mat;
+@use "sass:map";
+@use "palette.scss" as palette;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -11,27 +10,47 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-$RecipeLibrary-dark-primary: mat.define-palette(palette.$recipe-green-palette, 500, 300, 700);
-$RecipeLibrary-dark-accent: mat.define-palette(palette.$recipe-yellow-palette, 300);
-$RecipeLibrary-dark-warn: mat.define-palette(palette.$recipe-red-palette, 300, 200, 400);
+$RecipeLibrary-dark-primary: mat.define-palette(
+  palette.$recipe-green-palette,
+  500,
+  300,
+  700
+);
+$RecipeLibrary-dark-accent: mat.define-palette(
+  palette.$recipe-yellow-palette,
+  300
+);
+$RecipeLibrary-dark-warn: mat.define-palette(
+  palette.$recipe-red-palette,
+  300,
+  200,
+  400
+);
 
-$RecipeLibrary-dark-background: mat.define-palette(palette.$recipe-black-palette, 800);
-$RecipeLibrary-dark-sidebar: mat.define-palette(palette.$recipe-black-palette, 600);
+$RecipeLibrary-dark-background: mat.define-palette(
+  palette.$recipe-black-palette,
+  800
+);
+$RecipeLibrary-dark-sidebar: mat.define-palette(
+  palette.$recipe-black-palette,
+  600
+);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$RecipeLibrary-dark-theme: mat.define-dark-theme((
-  color: (
-    primary: $RecipeLibrary-dark-primary,
-    accent: $RecipeLibrary-dark-accent,
-    warn: $RecipeLibrary-dark-warn,
+$RecipeLibrary-dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $RecipeLibrary-dark-primary,
+      accent: $RecipeLibrary-dark-accent,
+      warn: $RecipeLibrary-dark-warn,
+    ),
   )
-));
+);
 
 $RecipeLibrary-dark-theme: map.set(
   $RecipeLibrary-dark-theme,
-  color
-  background,
+  color background,
   palette.$recipe-dark-theme-background-palette
 );
 
@@ -56,11 +75,21 @@ $RecipeLibrary-dark-theme: map.set(
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-app-sidebar { background-color: map.get(palette.$recipe-black-palette, 600);}
-app-extensible-container { background-color: map.get(palette.$recipe-black-palette, 700);}
+app-sidebar {
+  background-color: map.get(palette.$recipe-black-palette, 600);
+}
+app-extensible-container {
+  background-color: map.get(palette.$recipe-black-palette, 700);
+}
 .tableBackground {
   background-color: #424242;
 }
