--- a/src/app/components/autocomplete-with-add-function/autocomplete-with-add-function.component.html
+++ b/src/app/components/autocomplete-with-add-function/autocomplete-with-add-function.component.html
@@ -14,10 +14,7 @@
         [value]="item"
         (click)="onItemSelect(item)"
       >
-        <mat-icon
-          *ngIf="item === itemSelect.value && !knownItems.includes(item)"
-          >add</mat-icon
-        >
+        <mat-icon *ngIf="item === itemSelect.value && !knownItems.includes(item)">add</mat-icon>
         {{ item }}
       </mat-option>
     </mat-autocomplete>
