--- a/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
+++ b/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
@@ -12,6 +12,12 @@
     >
       Yes
     </button>
-    <button mat-button mat-dialog-close color="warn">No</button>
+    <button
+      mat-button
+      mat-dialog-close
+      color="warn"
+    >
+      No
+    </button>
   </mat-dialog-actions>
 </div>
