--- a/src/app/components/recipe-form/recipe-form.component.html
+++ b/src/app/components/recipe-form/recipe-form.component.html
@@ -45,6 +45,11 @@
     >
       {{ editing ? "Update" : "Add" }}
     </button>
-    <button mat-raised-button (click)="onRecipeChange.emit()">Cancel</button>
+    <button
+      mat-raised-button
+      (click)="onRecipeChange.emit()"
+    >
+      Cancel
+    </button>
   </div>
 </div>
