--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,8 +1,15 @@
 <div class="container">
   <div class="searchElements">
-    <mat-form-field class="searchTermInput" appearance="fill">
+    <mat-form-field
+      class="searchTermInput"
+      appearance="fill"
+    >
       <mat-label>Search</mat-label>
-      <input matInput placeholder="Insert Search terms here" value="" />
+      <input
+        matInput
+        placeholder="Insert Search terms here"
+        value=""
+      />
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
     <app-search-options class="searchOptions"></app-search-options>
