--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,31 +10,12 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-$RecipeLibrary-dark-primary: mat.define-palette(
-  palette.$recipe-green-palette,
-  500,
-  300,
-  700
-);
-$RecipeLibrary-dark-accent: mat.define-palette(
-  palette.$recipe-yellow-palette,
-  300
-);
-$RecipeLibrary-dark-warn: mat.define-palette(
-  palette.$recipe-red-palette,
-  300,
-  200,
-  400
-);
+$RecipeLibrary-dark-primary: mat.define-palette(palette.$recipe-green-palette, 500, 300, 700);
+$RecipeLibrary-dark-accent: mat.define-palette(palette.$recipe-yellow-palette, 300);
+$RecipeLibrary-dark-warn: mat.define-palette(palette.$recipe-red-palette, 300, 200, 400);
 
-$RecipeLibrary-dark-background: mat.define-palette(
-  palette.$recipe-black-palette,
-  800
-);
-$RecipeLibrary-dark-sidebar: mat.define-palette(
-  palette.$recipe-black-palette,
-  600
-);
+$RecipeLibrary-dark-background: mat.define-palette(palette.$recipe-black-palette, 800);
+$RecipeLibrary-dark-sidebar: mat.define-palette(palette.$recipe-black-palette, 600);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
