--- a/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
+++ b/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
@@ -10,19 +10,35 @@
       [disableAddFunction]="onlyKnownItems"
     ></app-autocomplete-with-add-function>
 
-    <table mat-table [dataSource]="tableDataSource">
+    <table
+      mat-table
+      [dataSource]="tableDataSource"
+    >
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+        >
           {{ headline }}
         </th>
-        <td mat-cell *matCellDef="let element">
+        <td
+          mat-cell
+          *matCellDef="let element"
+        >
           {{ element }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef class="action"></th>
-        <td mat-cell *matCellDef="let element">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="action"
+        ></th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+        >
           <button
             mat-icon-button
             disableRipple
@@ -34,10 +50,24 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns"></tr>
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" [attr.colspan]="columns.length">No items added</td>
+      <tr
+        mat-header-row
+        *matHeaderRowDef="columns"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: columns"
+      ></tr>
+      <tr
+        class="mat-row"
+        *matNoDataRow
+      >
+        <td
+          class="mat-cell"
+          [attr.colspan]="columns.length"
+        >
+          No items added
+        </td>
       </tr>
     </table>
   </mat-dialog-content>
@@ -50,6 +80,11 @@
     >
       Apply
     </button>
-    <button mat-button mat-dialog-close>Cancel</button>
+    <button
+      mat-button
+      mat-dialog-close
+    >
+      Cancel
+    </button>
   </mat-dialog-actions>
 </div>
