--- a/src/app/components/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/edit-recipes/edit-recipes.component.html
@@ -1,26 +1,55 @@
 <div class="container">
   <h1>Edit / Delete Recipes</h1>
   <div class="tableBackground tableContainer">
-    <table mat-table [dataSource]="tableDataSource">
+    <table
+      mat-table
+      [dataSource]="tableDataSource"
+    >
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Recipe</th>
-        <td mat-cell *matCellDef="let element">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+        >
+          Recipe
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+        >
           {{ element.recipeName }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef class="action"></th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button disableRipple (click)="editRecipe(element)">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="action"
+        ></th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+        >
+          <button
+            mat-icon-button
+            disableRipple
+            (click)="editRecipe(element)"
+          >
             <mat-icon>edit</mat-icon>
           </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef class="action"></th>
-        <td mat-cell *matCellDef="let element">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="action"
+        ></th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+        >
           <button
             mat-icon-button
             disableRipple
@@ -32,10 +61,22 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns"></tr>
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" [attr.colspan]="columns.length">
+      <tr
+        mat-header-row
+        *matHeaderRowDef="columns; sticky: true"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: columns"
+      ></tr>
+      <tr
+        class="mat-row"
+        *matNoDataRow
+      >
+        <td
+          class="mat-cell"
+          [attr.colspan]="columns.length"
+        >
           No Recipes added yet
         </td>
       </tr>
