--- a/src/app/components/rating-display/rating-display.component.html
+++ b/src/app/components/rating-display/rating-display.component.html
@@ -1,4 +1,7 @@
-<div class="container" [ngClass]="{ editable: editable }">
+<div
+  class="container"
+  [ngClass]="{ editable: editable }"
+>
   <h3 class="headline">{{ labelAddition }} Rating:</h3>
   <div class="stars">
     <span *ngFor="let i of counter(5)">
