--- a/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
+++ b/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
@@ -4,7 +4,7 @@
     <app-autocomplete-with-add-function
       [knownItems]="dialogData.knownItems"
       [filterFunction]="notAlreadyIncludedInData"
-      (onItemSelected)="onItemSelect($event)"
+      (itemSelected)="onItemSelect($event)"
       [itemName]="headline"
       [refreshFilteredItems]="refreshAutocompleteItems.asObservable()"
       [disableAddFunction]="onlyKnownItems"
