--- a/src/app/components/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/edit-recipes/edit-recipes.component.html
@@ -33,7 +33,7 @@
           <button
             mat-icon-button
             disableRipple
-            (click)="editRecipe(element)"
+            (click)="editRecipeTrigger(element)"
           >
             <mat-icon>edit</mat-icon>
           </button>
