--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,14 +3,14 @@
     <button
       mat-icon-button
       disableRipple
-      (click)="addRecipe()"
+      (click)="addRecipeTrigger()"
     >
       <mat-icon class="add-icon">add</mat-icon>
     </button>
     <button
       mat-icon-button
       disableRipple
-      (click)="editRecipes()"
+      (click)="editRecipesTrigger()"
     >
       <mat-icon class="edit-icon">edit</mat-icon>
     </button>
@@ -18,7 +18,7 @@
   <button
     mat-icon-button
     disableRipple
-    (click)="settings()"
+    (click)="settingsTrigger()"
   >
     <mat-icon class="settings-icon">settings</mat-icon>
   </button>
